--- a/index.html
+++ b/index.html
@@ -13,23 +13,25 @@
 </head>
 
 <body>
-  <div class="main__card">
-    <div>
-      <img src="./images/image-qr-code.png" alt="qr code image">
+  <main>
+    <div class="main__card">
+      <div>
+        <img src="./images/image-qr-code.png" alt="qr code image">
+      </div>
+      <div class="card__text">
+        <h1>
+          Improve your front-end skills by building projects
+        </h1>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </p>
+      </div>
     </div>
-    <div class="card__text">
-      <h3>
-        Improve your front-end skills by building projects
-      </h3>
-      <p>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-      </p>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Elmahdi Hass</a>.
     </div>
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Elmahdi Hass</a>.
-  </div>
+  </main>
 </body>
 
 </html>
